<resources>
    <string name="app_name">Blind Eye</string>
    <string name="title_activity_colour_detail">ColourDetailActivity</string>
    <!-- Dialog Fragment About -->
    <string name="about_dialog_name">Blind Eye</string>
    <string name="about_dialog_message">Blind Eye is an application that enables younger people to identify colours by tapping their screen on the desired colour.</string>
    <string name="about_dialog_by">Made by Dale Thompson - K00252533. As part of my Final Year Project.</string>
    <string name="define_colour">Name Your Colour!</string>

    <!--    Menu strings-->
    <string name="contact_us_main_menu">Contact Us</string>
    <string name="about_main_menu">About</string>
    <string name="flash">Flash</string>
    <string name="share_main_menu">Share</string>
    <string name="edit_main_menu">Edit</string>
    <string name="delete_main_menu">Delete</string>
    <string name="share_palette_menu">Share</string>
    <string name="edit_palette_menu">Edit</string>
    <string name="delete_palette_menu">Delete</string>

    <string name="colour_detail_activity_edit_text_dialog_fragment">Edit the Colour Name</string>
    <string name="colour_detail_activity_edit_text_dialog_fragment_pos_button">Edit</string>

    <string name="palette_detail_activity_edit_text_dialog_fragment">Edit the Colour Palette</string>
    <string name="palette_detail_activity_edit_text_dialog_fragment_hint">Your Cool Palette</string>
    <string name="palette_detail_activity_edit_text_dialog_fragment_pos_button">Edit</string>
    <string name="colour_saved_msg">Colour Saved!</string>

    <string name="activity_palette_maker_default_name_for_palette">Palette %d</string>

    <string name="contact_uri" translatable="false">mailto:%1$s?subject=%2$s</string>
    <string name="contact_email" translatable="false">k00252533@student.lit.ie</string>
    <string name="contact_default_subject">[Blind Eye] Suggestion</string>

    <string name="activity_main_error_msg">Not enough colours. Must have at least 2 to create a Palette!</string>

    <string name="activity_main_pager_title_colour">Colour</string>
    <string name="activity_main_pager_title_palette">Palette</string>
    <string name="activity_main_pager_title_unknown">Unknown</string>

    <string name="colour_clip_util_success_msg">Copied to Clipboard</string>
    <string name="colour_clip_util_hex">HEX Value</string>
    <string name="colour_clip_util_rgb">RGB Value</string>
    <string name="colour_clip_util_hsv">HSV Value</string>

    <string name="palette_list_view_empty">You do not have any Palettes :(\n\nCreate one with the button on the bottom right!</string>

</resources>